<resources>
    <string name="app_name">Дневник</string>
    <string name="login">Добавить</string>
    <string name="title_activity_login">Добавить ученика</string>
    <string name="prompt_username">Введите имя ученика</string>
    <string name="password">Пароль</string>
    <string name="prompt_password">Пароль</string>
    <string name="error_invalid_username">Введите логин</string>
    <string name="error_invalid_password">Введите пароль</string>
    <string name="error_incorrect_password">Имя ученика или пароль не верные</string>
    <string name="error_server_unavailable">Сервер не доступен. Попробуйте позже</string>
    <string name="error_field_required">Поле обязательно для ввода</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="Open">Открыть</string>
    <string name="Close">Закрыть</string>
    <string name="menu_refresh">Обновить</string>
    <string name="refresh_error">Не удалось получить данные. Попробуйте еще раз</string>
    <string name="menu_change_user">Список учеников</string>
    <string name="background_description">фон</string>
    <string name="logo_description">logo</string>
    <string name="title_activity_marks_info">Информация о предмете</string>
    <string name="teacher">Учитель</string>
    <string name="period">Период</string>
    <string name="subject_name">Предмет</string>
    <string name="marks">Оценки</string>
    <string name="mark">Оценка</string>
    <string name="date">Дата</string>
    <string name="average_mark">Средняя оценка</string>
    <string name="try_again">Попробовать снова</string>
    <string name="task">Задание</string>
    <string name="title_activity_message_info">Информация о сообщении</string>
    <string name="sender">Отправил</string>
    <string name="message">Сообщение</string>
    <string name="final_mark">Итоговая оценка</string>
    <string name="settings">Настройки</string>
    <string name="title_activity_settings">Настройки</string>
    <string name="settings_mark_notification_key">settings_mark_notification</string>
    <string name="vacation">КАНИКУЛЫ</string>
    <string name="update_question">Хотите обновить приложение сейчас?</string>
    <string name="update">Обновить</string>
    <string name="later">Позже</string>
    <string name="no_grants_to_write_to_storage">Вы не дали права на запись на карту памяти</string>
    <string name="download_failed">Не удалось скачать обновление. Попробуйте еще раз</string>
    <string name="about">О приложении</string>
    <string name="copy_to_clipboard">Сообщение об ошибке скопировано в буфер обмена</string>
    <string name="title_activity_users">Ученики</string>
    <string name="choose_city">Выберите город</string>
    <string name="choose_school">Выберите школу</string>
    <string name="cancel">Отмена</string>
    <string name="exit">Выход</string>
    <string name="menu_navigate">Период</string>
    <string name="user_info">Данные об ученике</string>
</resources>
