<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="*"
        android:stretchColumns="*">

        <TableRow android:layout_width="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:width="80dp"
                android:gravity="start"
                android:text="@string/date"
                android:textAppearance="?attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/message_info_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:width="80dp"
                android:gravity="start"
                android:textAppearance="?attr/textAppearanceListItem" />
        </TableRow>

        <TableRow android:layout_width="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:width="80dp"
                android:gravity="start"
                android:text="@string/sender"
                android:textAppearance="?attr/textAppearanceListItem" />

            <TextView
                android:id="@+id/message_info_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:width="80dp"
                android:gravity="start"
                android:textAppearance="?attr/textAppearanceListItem" />

        </TableRow>

        <TableRow android:layout_width="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:layout_span="2"
                android:gravity="center_horizontal"
                android:text="@string/message"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textStyle="bold" />
        </TableRow>

        <TableRow android:layout_width="match_parent">

            <TextView
                android:id="@+id/message_info_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:layout_span="2"
                android:gravity="fill_horizontal"
                android:textAppearance="?attr/textAppearanceListItem" />
        </TableRow>
    </TableLayout>
</ScrollView>